relecture classe de roublard

--- a/data/classes/LO9STvskJemPkiAI.htm
+++ b/data/classes/LO9STvskJemPkiAI.htm
@@ -1,7 +1,6 @@
 Name: Rogue
 Nom: Roublard
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><em>You are skilled and opportunistic . Using your sharp wits and quick reactions, you take advantage of your opponents' missteps and strike where it hurts most. You play a dangerous game, seeking thrills and testing your skills, and likely don't care much for any laws that happen to get in your way. While the path of every rogue is unique and riddled with danger, the one thing you all share in common is the breadth and depth of your skills.</em><br /><br /><strong>Key Ability: DEXTERITY OR OTHER</strong><br />At 1st level, your class gives you an ability boost to Dexterity or an option from rogue's racket.<br /><br /><strong>Hit Points: 8 plus your Constitution modifier</strong><br />You increase your maximum number of HP by this number at 1st level and every level thereafter.</p>
@@ -209,42 +208,42 @@ Nom: Roublard
 <p>The target attempts a Fortitude save at your class DC. It then becomes temporarily immune to your Master Strike for 1 day.<br /><br /><strong>Critical Success</strong> The target is unaffected.<br /><strong>Success</strong> The target is enfeebled 2 until the end of your next turn.<br /><strong>Failure</strong> The target is paralyzed for 4 rounds.<br /><strong>Critical Failure</strong> The target is paralyzed for 4 rounds, knocked unconscious for 2 hours, or killed (your choice).</p>
 ------ Description (fr) ------
 <p><em>Vous êtes talentueux et opportuniste. Grâce à la vivacité de votre esprit et de vos réactions, vous profitez des faux pas de vos adversaires pour frapper leurs points faibles. Vous jouez à un jeu dangereux et cherchez constamment à mettre vos compétences à l’épreuve et à ressentir le frisson de l’adrénaline. Vous vous souciez probablement comme d’une guigne des lois qui se mettent en travers de votre chemin. Si chaque roublard suit une voie aussi unique que dangereuse, ils ont tous en commun un grand éventail de compétences approfondies.</em><br /><br /><strong>Caractéristique essentielle: DEXTÉRITÉ ou AUTRE</strong><br />Au niveau 1, votre classe vous confère une prime de caractéristique en Dextérité ou une option choisie parmi les trafics du roublard.<br /><br /><strong>Points de vie: 8 plus plus votre modificateur de Constitution</strong><br />Vous augmentez votre maximum de PV de ce montant au niveau 1, puis à chaque fois que vous gagnez un niveau.<br /></p>
-<h1 class="title">Jouer un roublard</h1>
-<h2 class="title">Lors des rencontres de combat...</h2>
+<h1>Jouer un roublard</h1>
+<h2>Lors des rencontres de combat...</h2>
 <p>Vous vous déplacez discrètement afin de surprendre vos adversaires. Vous êtes un appareil de précision, bien plus utile face à un adversaire robuste ou un incantateur qui garde ses distances que face aux soldats de troupe.</p>
-<h2 class="title">Lors des rencontres sociales...</h2>
+<h2>Lors des rencontres sociales...</h2>
 <p>Vos compétences vous donnent accès à de nombreuses méthodes pour influencer vos interlocuteurs. Monter des arnaques ou dégoter des informations est devenu une seconde nature chez vous.</p>
-<h2 class="title">En exploration...</h2>
+<h2>En exploration...</h2>
 <p>Vous vous faufilez discrètement, surprenez vos adversaires et repérez les dangers ou les pièges. Votre capacité à désactiver des pièges, résoudre des énigmes et anticiper les dangers fait de vous un atout de poids.</p>
-<h2 class="title">Pendant un intermède...</h2>
+<h2>Pendant un intermède...</h2>
 <p>Vous pouvez faire les poches des passants ou vendre des marchandises illégales. Vous pouvez également intégrer une guilde de voleurs, ou même fonder la vôtre.</p>
-<h2 class="title">Vous...</h2>
+<h2>Vous...</h2>
 <ul>
 <li>Affinez vos compétences grâce à un entraînement intense, par vous-même ou au cours de vos aventures.</li>
 <li>Savez comment obtenir des marchandises illicites.</li>
 <li>Contournez ou enfreignez les lois que vous trouvez absurdes, ou suivez votre propre code.</li>
 </ul>
-<h2 class="title">Les autres...</h2>
+<h2>Les autres...</h2>
 <ul>
 <li>Vous trouvent charmant ou fascinant, même s’ils ne vous considèrent pas digne de confiance.</li>
 <li>S’adressent à vous quand ils cherchent quelqu’un prêt à prendre des risques ou à employer des méthodes discutables pour arriver à ses fins.</li>
 <li>Pensent que la cupidité est votre motivation première.</li>
 </ul>
-<h1 class="title">Maîtrises initiales</h1>
+<h1>Maîtrises initiales</h1>
 <p>Au niveau 1, vous gagnez les rangs de maîtrise indiqués pour les statistiques suivantes. Vous êtes inexpérimenté pour tout ce qui ne figure pas ci‑dessous, à moins d’obtenir un rang de maîtrise supérieur d’une autre manière.</p>
-<h2 class="title">Perception</h2>
+<h2>Perception</h2>
 <p>Expert en Perception</p>
-<h2 class="title">Jets de sauvegarde</h2>
+<h2>Jets de sauvegarde</h2>
 <p>Qualifié en Vigueur<br />Expert en Réflexes<br />Expert en Volonté</p>
-<h2 class="title">Compétences</h2>
+<h2>Compétences</h2>
 <p>Qualifié en Discrétion<br />Qualifié dans un nombre de compétences supplémentaires égal à 7 plus votre modificateur d’Intelligence</p>
-<h2 class="title">Attaques</h2>
+<h2>Attaques</h2>
 <p>Qualifié avec les armes simples<br />Qualifié avec la rapière, la matraque, l'arc court et l'épée courte<br />Qualifié en attaques à mains nues</p>
-<h2 class="title">Défenses</h2>
+<h2>Défenses</h2>
 <p>Qualifié avec les armures légères<br />Qualifié pour la défense sans armure</p>
-<h2 class="title">DD de classe</h2>
-<p>Qualifié dans le DD de classe roublard</p>
-<h1 class="title">Capacités de classe</h1>
+<h2>DD de classe</h2>
+<p>Qualifié dans le DD de classe de roublard</p>
+<h1>Capacités de classe</h1>
 <p>En tant que roublard, vous gagnez les pouvoirs suivants. Au-delà du niveau 1, les noms des pouvoirs sont accompagnés du niveau auquel vous les gagnez.</p>
 <table class="pf2-table">
 <thead>
@@ -336,13 +335,13 @@ Nom: Roublard
 </tr>
 </tbody>
 </table>
-<h2 class="title">Ascendance et historique</h2>
+<h2>Ascendance et historique</h2>
 <p>En plus des pouvoirs que votre classe vous accorde au niveau 1, vous bénéficiez des avantages de votre ascendance et de votre historique.</p>
-<h2 class="title">Maîtrises initiales</h2>
+<h2>Maîtrises initiales</h2>
 <p>Au niveau 1, vous obtenez un nombre de maîtrises qui représentent votre entraînement de base. Elles sont indiquées au début de cette classe.</p>
-<h2 class="title">Don de roublard</h2>
+<h2>Don de roublard</h2>
 <p>Au niveau 1, puis tous les niveaux pairs, vous gagnez un don de classe de roublard</p>
-<h2 class="title">Trafic de roublard</h2>
+<h2>Trafic de roublard</h2>
 <p>En vous engageant sur la voie du roublard, vous développez votre propre style grâce auquel vous mènerez vos activités illicites. Votre trafic oriente vos techniques de roublard et la manière dont vous envisagez un coup, tout en contribuant à faire reconnaître votre talent pour un certain type de missions auprès de la pègre. Ainsi, un client fortuné qui envisage un casse pourra engager une équipe de roublards aux trafics spécialisés couvrant tous les aspects de la mission. Choisissez un trafic de roublard.</p>
 <p>Les trafics présentés dans cet ouvrage sont les suivants :</p>
 <ul>
@@ -352,35 +351,35 @@ Nom: Roublard
 <li>@Compendium[pf2e.classfeatures.3KPZ7svIO6kmmEKH]{Voyou}</li>
 <li>@Compendium[pf2e.classfeatures.wAh2riuFRzz0edPl]{Voleur}</li>
 </ul>
-<h2 class="title">Dons de compétences</h2>
+<h2>Dons de compétences</h2>
 <p>Vous gagnez des dons de compétences plus souvent que les autres. Au niveau 1 et tous les niveaux suivants, vous gagnez un don de compétence. Ces dons disposent du trait compétence.</p>
-<h2 class="title">Attaque sournoise</h2>
+<h2>Attaque sournoise</h2>
 <p>Vous profitez que votre ennemi ne peut pas se défendre correctement pour lui infliger des dégâts supplémentaires. Si vous Frappez une créature qui se trouve dans l'état @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} avec une arme de corps à corps agile ou de finesse, avec une attaque à mains nues agile ou de finesse, ou avec une attaque d’arme à distance, vous lui infligez 1d6 dégâts de précision supplémentaires. Pour une attaque à distance avec une arme de corps à corps que vous jetez, cette arme doit également posséder le trait agile ou finesse.</p>
 <p>La quantité de dés de dégâts de votre attaque sournoise augmente en même temps que votre niveau de roublard. Vous augmentez cette quantité de dés de un aux niveaux 5, 11 et 17.</p>
-<h2 class="title">Attaque surprise</h2>
+<h2>Attaque surprise</h2>
 <p>Vos adversaires n’ont pas le temps de réagir que vous êtes déjà prêt à vous battre. Au premier round de combat, si vous lancez un dé de Duperie ou de Discrétion afin de déterminer votre rang d’initiative, les créatures qui n’ont pas encore agi sont prises au dépourvu face à vous.</p>
-<h2 class="title">Améliorations de compétence<span style="float: right;">Niveau 2</span></h2>
+<h2>Améliorations de compétence<span style="float: right;">Niveau 2</span></h2>
 <p>Vous gagnez plus d’améliorations de compétences que les membres des autres classes. Au niveau 2 et tous les niveaux suivants, vous gagnez une amélioration de compétence. Vous pouvez utiliser cette amélioration pour devenir qualifié dans une compétence dans laquelle vous êtes inexpérimenté, ou pour devenir expert dans une compétence dans laquelle vous êtes déjà qualifié.</p>
 <p>À partir du niveau 7, vous pouvez utiliser l’amélioration de compétence pour devenir maître dans une compétence dans laquelle vous êtes déjà expert et à partir du niveau 15, vous pouvez l’utiliser pour devenir légendaire dans une compétence dans laquelle vous êtes déjà maître.</p>
-<h2 class="title">Refus d'avantage<span style="float: right;">Niveau 3</span></h2>
+<h2>Refus d'avantage<span style="float: right;">Niveau 3</span></h2>
 <p>Dans la mesure où vous profitez des faiblesses de la défense des autres, vous faites attention à ne pas leur laisser les mêmes opportunités. Vous n’êtes pas Pris au dépourvu par les créatures qui sont Cachées, Non détectées ou qui vous prennent en tenaille si elles sont d’un niveau inférieur ou égal au vôtre, ni par les attaques surprises des créatures d’un niveau inférieur ou égal au vôtre. Cependant, ces créatures peuvent toujours aider leurs alliés à vous prendre en tenaille.</p>
-<h2 class="title">Dons généraux<span style="float: right;">Niveau 3</span></h2>
+<h2>Dons généraux<span style="float: right;">Niveau 3</span></h2>
 <p>Au niveau 3, puis tous les quatre niveaux, vous gagnez un don général.</p>
-<h2 class="title">Primes de caractéristiques<span style="float: right;">Niveau 5</span></h2>
+<h2>Primes de caractéristiques<span style="float: right;">Niveau 5</span></h2>
 <p>Au niveau 5, puis tous les cinq niveaux, vous améliorez quatre caractéristiques différentes. Vous pouvez utiliser ces primes de caractéristique pour faire passer une valeur de caractéristique au-dessus de 18. La prime augmente la valeur de caractéristique de 1 si elle est déjà de 18 ou plus ou de 2 si elle est inférieure à 18.</p>
-<h2 class="title">Dons ancestraux<span style="float: right;">Niveau 5</span></h2>
+<h2>Dons ancestraux<span style="float: right;">Niveau 5</span></h2>
 <p>Vous gagnez un don ancestral au niveau 5 puis tous les quatre niveaux, en plus de celui avec lequel vous avez commencé.</p>
-<h2 class="title">Astuces martiales<span style="float: right;">Niveau 5</span></h2>
+<h2>Astuces martiales<span style="float: right;">Niveau 5</span></h2>
 <p>Vous avez développé une grande familiarité avec vos instruments de travail. Vous gagnez le rang de maîtrise expert avec les armes simples et les attaques à mains nues, ainsi que la rapière, la matraque, l’arc court et l’épée courte. Quand vous obtenez un succès critique à un jet d’attaque contre une créature Prise au dépourvu et que vous utilisez une arme agile ou de finesse, une attaque à mains nues ou une des armes présentées ici, vous appliquez l’effet critique spécialisé de l’arme que vous maniez.</p>
-<h2 class="title">Évasion<span style="float: right;">Niveau 7</span></h2>
+<h2>Évasion<span style="float: right;">Niveau 7</span></h2>
 <p>Vous avez appris à vous déplacer rapidement afin d’échapper aux explosions, au souffle d’un dragon et à bien pire. Votre rang de maîtrise pour les jets de Réflexes passe à maître. Quand vous obtenez un succès sur un jet de Réflexes, celui-ci est transformé en succès critique.</p>
-<h2 class="title">Sens alertes<span style="float: right;">Niveau 7</span></h2>
+<h2>Sens alertes<span style="float: right;">Niveau 7</span></h2>
 <p>Au cours de vos aventures, vous avez développé une conscience aiguë de votre environnement et portez une grande attention aux détails. Votre rang de maîtrise en Perception passe à maître.</p>
-<h2 class="title">Spécialisation martiale<span style="float: right;">Niveau 7</span></h2>
+<h2>Spécialisation martiale<span style="float: right;">Niveau 7</span></h2>
 <p>Vous avez appris à infliger de graves blessures avec les armes que vous connaissez le mieux. Vous infligez 2 dégâts de plus avec les armes et les attaques à mains nues pour lesquelles vous êtes expert. Ces dégâts passent à 3 si vous êtes maître et à 4 si vous êtes légendaire.</p>
-<h2 class="title">Frappe incapacitante<span style="float: right;">Niveau 9</span></h2>
+<h2>Frappe incapacitante<span style="float: right;">Niveau 9</span></h2>
 <p>Quand vous profitez d’une ouverture, vous blessez et handicapez votre adversaire. Vous gagnez l’action gratuite Frappe incapacitante.</p>
-<h3 class="title">@Compendium[pf2e.actionspf2e.bp0Up04x3dzGK5bB]{Frappes handicapantes <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span></h3>
+<h3 class="title">@Compendium[pf2e.actionspf2e.bp0Up04x3dzGK5bB]{Frappes handicapantes}<span class="pf2-icon">F</span>
 <p><strong>Déclencheur</strong> Vous réussissez une Frappe contre une créature prise au dépourvu et lui infligez des dégâts.</p>
 <hr />
 <p>La créature reçoit l’un des handicaps suivants, qui dure jusqu’à la fin de votre prochain tour.<p>
@@ -388,32 +387,32 @@ Nom: Roublard
 <li><strong>Handicap</strong> La cible reçoit un malus de statut de -3 mètres à ses Vitesses.</li>
 <li><strong>Handicap</strong> La cible devient Affaiblie 1.</li>
 </ul>
-<h2 class="title">Vigueur surhumaine<span style="float: right;">Niveau 9</span></h2>
+<h2>Vigueur surhumaine<span style="float: right;">Niveau 9</span></h2>
 <p>Vous bénéficiez d’une constitution incroyablement robuste. Votre rang de maîtrise pour les jets de Vigueur passe à expert.</p>
-<h2 class="title">Expertise du roublard<span style="float: right;">Niveau 11</span></h2>
+<h2>Expertise du roublard<span style="float: right;">Niveau 11</span></h2>
 <p>Il est maintenant plus difficile de résister à vos techniques. Votre rang de maîtrise dans le DD de classe roublard devient expert.</p>
-<h2 class="title">Évasion améliorée<span style="float: right;">Niveau 13</span></h2>
+<h2>Évasion améliorée<span style="float: right;">Niveau 13</span></h2>
 <p>Vous évitez les dangers avec une aisance hors pair. Votre rang de maîtrise pour les jets de Réflexes devient légendaire. Lorsque vous obtenez un échec sur le jet de Réflexes, celui-ci se transforme en échec. Quand vous échouez à un jet de Réflexes contre un effet qui vous inflige des dégâts, vous ne subissez que la moitié des dégâts.</p>
-<h2 class="title">Sens extraordinaires<span style="float: right;">Niveau 13</span></h2>
+<h2>Sens extraordinaires<span style="float: right;">Niveau 13</span></h2>
 <p>Vous décelez des choses quasiment impossibles à remarquer pour une personne ordinaire. Votre rang de maîtrise en Perception passe à légendaire.</p>
 <h2 class="title">Expertise avec les armures légères<span style="float: right;">Niveau 13</span></h2>
 <p>Vous avez appris à esquiver tout en portant une armure légère. Votre rang de maîtrise avec les armures légères et la défense sans armure devient expert.</p>
-<h2 class="title">Astuces de maître<span style="float: right;">Niveau 13</span></h2>
+<h2>Astuces de maître<span style="float: right;">Niveau 13</span></h2>
 <p>Vous maîtrisez les techniques de combat des roublards. Votre rang de maîtrise devient maître pour toutes les armes simples, les attaques à mains nues, ainsi que la rapière, la matraque, l’arc court et l’épée courte.</p>
-<h2 class="title">Double handicap<span style="float: right;">Niveau 15</span></h2>
+<h2>Double handicap<span style="float: right;">Niveau 15</span></h2>
 <p>Vos attaques opportunistes sont particulièrement efficaces. Quand vous utilisez Frappe incapacitante, vous pouvez appliquer deux handicaps simultanément ; éliminer l’un de ces handicaps élimine également le second.</p>
-<h2 class="title">Spécialisation martiale supérieure<span style="float: right;">Niveau 15</span></h2>
+<h2>Spécialisation martiale supérieure<span style="float: right;">Niveau 15</span></h2>
 <p>Les dégâts que vous infligez grâce à votre spécialisation martiale passent à 4 avec les armes et les attaques à mains nues si vous possédez le rang expert avec celles-ci, à 6 si vous possédez le rang maître et à 8 si vous possédez le rang légendaire.</p>
-<h2 class="title">Esprit fuyant<span style="float: right;">Niveau 17</span></h2>
+<h2>Esprit fuyant<span style="float: right;">Niveau 17</span></h2>
 <p>Vous utilisez des astuces mentales et cognitives pour vous protéger des effets mentaux. Votre rang de maîtrise pour les jets de Volonté passe à maître. Quand vous obtenez un succès sur un jet de Volonté, vous remportez à la place un succès critique.</p>
-<h2 class="title">Maîtrises des armures légères<span style="float: right;">Niveau 19</span></h2>
+<h2>Maîtrises des armures légères<span style="float: right;">Niveau 19</span></h2>
 <p>Vous maîtrisez mieux les armures légères et êtes ainsi capable de mieux esquiver les coups. Votre rang de maîtrise avec les armures légères et la défense sans armure devient maître.</p>
-<h2 class="title">Frappe de maître<span style="float: right;">Niveau 19</span></h2>
+<h2>Frappe de maître<span style="float: right;">Niveau 19</span></h2>
 <p>Vous pouvez mettre hors de combat un ennemi distrait en lui assénant un seul coup. Votre rang de maîtrise dans le DD de classe de roublard devient maître. Vous gagnez l’action gratuite Frappe de maître.</p>
-<h3 class="title">@Compendium[pf2e.actionspf2e.Rlp7ND33yYfxiEWi]{Frappe de maître} <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span></h3>
-<p><strong>Déclencheur</strong>  Vous réussissez une Frappe contre une créature Prise au dépourvu et lui infligez des dégâts.</p>
+<h3>@Compendium[pf2e.actionspf2e.Rlp7ND33yYfxiEWi]{Frappe de maître} <span class="pf2-icon">F</span></h3>
+<p><strong>Déclencheur</strong> Vous réussissez une Frappe contre une créature Prise au dépourvu et lui infligez des dégâts.</p>
 <hr />
-<p>La cible fait un jet de Vigueur contre votre DD de classe. Elle devient temporairement immunisée à votre Frappe de maître pour 1 journée.</p>
+<p>La cible fait un jet de Vigueur contre votre DD de classe. Elle devient temporairement immunisée à votre Frappe de maître pendant 1 journée.</p>
 <hr/>
 <p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
 <p><strong>Succès</strong> La cible est Affaiblie 2 jusqu’à la fin de votre prochain tour.</p>
