--- a/data/pathfinder-bestiary/0plBflWwrCWQO2RO.htm
+++ b/data/pathfinder-bestiary/0plBflWwrCWQO2RO.htm
@@ -1,7 +1,6 @@
 Name: Zombie Shambler
 Nom: Titubeur zombie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A zombie shambler is a slow-moving horror dangerous in larger groups.</p>
