--- a/data/pathfinder-bestiary/9qjXP1Lho1UmAihJ.htm
+++ b/data/pathfinder-bestiary/9qjXP1Lho1UmAihJ.htm
@@ -1,7 +1,6 @@
 Name: Axiomite
 Nom: Axiomite
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>According to the axiomites, their kind rose from the raw mathematical underpinnings of the universe, manifesting as great builders who created the ancient, colossal cities of the Outer Planes and gave life to the mechanical inevitables. According to the aeons, axiomites are part of the Monad, having both risen from and rebelled against it long ago. Since the Convergence, most axiomites have recognized this as a fundamental truth, particularly after the aeons showed the axiomites how the Utopian language has formed as an amalgam of aeon envisioning and formulaic mathematical expression. Most axiomites live in the perfect city of Axis, which they continually act to improve, thus refining the concept of perfection itself.</p>
