--- a/data/pathfinder-bestiary/bjJUZKcA47Qp0ZwL.htm
+++ b/data/pathfinder-bestiary/bjJUZKcA47Qp0ZwL.htm
@@ -1,7 +1,6 @@
 Name: Pleroma
 Nom: Pléroma
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Among the most powerful of all the true aeons, pleromas are a manifestation of the duality of creation and destruction. Their physical manifestation is a constant state of flux between these two poles, their forms a shifting cloak of black where galaxies and other celestial objects flit in and out of existence, as if depicting the constant life, death, and rebirth of a miniature, self-contained universe.</p>
