--- a/data/pathfinder-bestiary/Br1AtKUHe3nbzjnY.htm
+++ b/data/pathfinder-bestiary/Br1AtKUHe3nbzjnY.htm
@@ -1,7 +1,6 @@
 Name: Mimic
 Nom: Mimique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Thought to be the result of a failed experiment meant to animate objects or a sinister alghollthu creation, mimics are clever monsters that can take the form of common manufactured objects. Mimics are ambush predators and voracious eaters, surprising their prey through their uncanny ability to mimic the form of common furniture and miscellany. They remain disguised until unsuspecting adventurers happen by, then they lash out in ambush.</p>
