--- a/data/pathfinder-bestiary/E0PIGtVfc5PFVT2C.htm
+++ b/data/pathfinder-bestiary/E0PIGtVfc5PFVT2C.htm
@@ -1,7 +1,6 @@
 Name: Cacodaemon
 Nom: Cacodaémon
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>These embodiments of demented violence and spite are spawned from eddies of angry and warped souls amid Abaddon's mists. Cacodaemons constantly hunger for mortal souls and yearn to create suffering. As gnashing spheres of teeth, fins, and spines, they are the weakest of daemonkind, an amalgam of various petty forms of death without the strength that comes from focusing on a single cause of demise.</p>
