--- a/data/pathfinder-bestiary/Ix1PziAEk9IIMYBz.htm
+++ b/data/pathfinder-bestiary/Ix1PziAEk9IIMYBz.htm
@@ -1,7 +1,6 @@
 Name: Zombie Brute
 Nom: Brute zombie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Necromantic augmentations have granted this zombie increased size and power.</p>
