--- a/data/pathfinder-bestiary/jGzVwekcRX5aQpbT.htm
+++ b/data/pathfinder-bestiary/jGzVwekcRX5aQpbT.htm
@@ -1,7 +1,6 @@
 Name: Goblin Commando
 Nom: Commando Gobelin
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The theoretical leaders of goblin raids are called goblin commandos. In practice, goblin commandos rarely continue to lead their comrades once a battle has begun. Most shirk their responsibilities in favor of wading into the fray and claiming more glory from their tribe-mates.</p>
