--- a/data/pathfinder-bestiary/jVZRROs0GzDjVrgi.htm
+++ b/data/pathfinder-bestiary/jVZRROs0GzDjVrgi.htm
@@ -1,7 +1,6 @@
 Name: Goblin Warrior
 Nom: Guerrier Gobelin
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The frontline fighters of goblin tribes prefer to fight in large groups-especially when they can outnumber their foes at least three to one.</p>
