--- a/data/pathfinder-bestiary/LVhVb7abhv4onzZZ.htm
+++ b/data/pathfinder-bestiary/LVhVb7abhv4onzZZ.htm
@@ -1,7 +1,6 @@
 Name: Arbiter
 Nom: Arbitre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>These spherical inevitables are scouts and diplomats. Found throughout the multiverse, they have traditionally kept watch over on chaos and its agents. With the announcement of the Convergence, many arbiters now serve as go-betweens among the aeon alliance and its mortal associates.</p>
@@ -10,4 +9,4 @@ Nom: Arbitre
 <p>As a result of recent shifts in reality, aeons have begun to reassert a presence in the perfect planar city of Axis. To the aeons, this is merely the latest in a recurring cycle, albeit one that mortals have not yet borne witness to. Once regarded as an independent faction, the living machines known as inevitables are now revealed as having been agents of the aeons all along, and while inevitables have their own shared themes and features, they are very much living but constructed manifestations of the aeons' war against imbalance-particularly with regard to how this war is waged against the forces of chaos.</p>
 <p>Aeons have a name for this cyclic return, in which they welcome the industrious axiomites back to their fold and bring the inevitables once again under their control: the "Convergence." At the onset of the Convergence, a council of pleroma aeons appeared in the Eternal City of Axis, where they revealed that axiomites were wayward aeons, split off long ago to pursue the act of creation. With the latest cycle of change it was time for the axiomites and their creations, the inevitables, to rejoin the aeon cause. While most axiomites and inevitables fell in line, realizing perhaps on a fundamental level of reality that what the aeons said was the truth, some refused to heed the call and waited for the wrath of the aeons-but that wrath has yet to come. The dual-natured aeons have responded to those who have declined in confusing ways. With some they treat and even bargain, while a handful of others they have destroyed, and a few have been exterminated by the axiomites and allied inevitables. But most of these quiet insurgents they leave alone, allowing these axiomites to continue to create in peace and the inevitables to continue with their duties. How-or if-this Convergence will end is as little understood as the aeons themselves.</p>
 ------ Description (fr) ------
-Ces inévitables sphériques sont des éclaireurs et des diplomates. Présents dans l’ensemble du multivers, ils surveillaient habituellement le chaos et ses agents. Avec l’annonce de la Convergence, de nombreux arbitres servent désormais d’intermédiaires entre l’alliance Aéon et ses associés mortels.<br><br>
+Ces Inévitables sphériques sont des éclaireurs et des diplomates. Présents dans l’ensemble du multivers, ils surveillaient habituellement le chaos et ses agents. Avec l’annonce de la Convergence, de nombreux Arbitres servent désormais d’intermédiaires entre l’alliance Aéon et ses associés mortels.<br><br>
