--- a/data/pathfinder-bestiary/NW1Ax1QGE9W4DmiN.htm
+++ b/data/pathfinder-bestiary/NW1Ax1QGE9W4DmiN.htm
@@ -1,7 +1,6 @@
 Name: Ceustodaemon
 Nom: Ceustodaémon
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Ceustodaemons are formed from the souls of vile mortals, particularly those who took efforts to hasten their own death, their willingness shaping them into daemonic servants. Their otherworldly senses make them useful for protecting vaults and similar locations on the Material Plane.</p>
