--- a/data/pathfinder-bestiary/z0l0lHc79NbMxiqZ.htm
+++ b/data/pathfinder-bestiary/z0l0lHc79NbMxiqZ.htm
@@ -1,7 +1,6 @@
 Name: Goblin Pyro
 Nom: Pyro gobelin
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Some goblins take their people's admiration of fire fully into the realm of deadly obsession. These pyromaniacs can be a great boon to a band of goblin raiders eager to torch their enemies and wreak havoc. More often, however, their presence is a double-edged sword; in the heat of the moment, goblin pyros sometimes lose sight of their tribe's goals and simply set fire to anything that will burn-including their own allies.</p>
