--- a/data/pathfinder-bestiary/93hZtLl9pRRfqI05.htm
+++ b/data/pathfinder-bestiary/93hZtLl9pRRfqI05.htm
@@ -1,8 +1,8 @@
 Name: Blue Kobold Dragon Mage
-Nom: 
-État: auto-trad
+Nom: Mage-dragon Kobold bleu 
+État: libre
 
 ------ Description (en) ------
 Kobold dragon mages use magic to carry out their secret schemes. The presence of a dragon mage in a kobold warren is one of the greatest testaments to the kobolds' claim to draconic heritage.<br /><br />
 ------ Description (fr) ------
-Les mages-dragons kobolds utilisent la magie pour mener à bien leurs projets secrets. La présence d'un mage dragon dans une forêt kobold est l'un des plus grands témoignages de l'héritage draconique revendiqué par les kobolds.<br /><br />
+Les Mages-dragons Kobolds utilisent la magie pour mener à bien leurs projets secrets. La présence d'un mage dragon dans une forêt kobold est l'un des plus grands témoignages de l'héritage draconique revendiqué par les Kobolds.<br /><br />
