--- a/data/pathfinder-bestiary/93hZtLl9pRRfqI05.htm
+++ b/data/pathfinder-bestiary/93hZtLl9pRRfqI05.htm
@@ -1,5 +1,5 @@
 Name: Blue Kobold Dragon Mage
-Nom: Mage-dragon Kobold bleu 
+Nom: Mage-dragon bleu Kobold 
 État: libre
 
 ------ Description (en) ------
