--- a/data/equipment/consumable-16-ws3OXRgAawwYIKK6.htm
+++ b/data/equipment/consumable-16-ws3OXRgAawwYIKK6.htm
@@ -1,6 +1,6 @@
 Name: Repulsion Resin
 Nom: Résine répulsive
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact;</p>
