--- a/data/pathfinder-bestiary-2/r9L6tdT44kYeN1FV.htm
+++ b/data/pathfinder-bestiary-2/r9L6tdT44kYeN1FV.htm
@@ -1,6 +1,6 @@
 Name: Giant Chameleon
 Nom: Caméléon géant
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 Giant chameleons are legendary for their ability to change their skin color in response to their surroundings. Their eyes are capable of peering in different directions independently, making them almost as difficult to sneak up on as they are to notice in the first place.<br /><br />
