--- a/data/pathfinder-bestiary-2/VrkmTQKB3Ln7wVTr.htm
+++ b/data/pathfinder-bestiary-2/VrkmTQKB3Ln7wVTr.htm
@@ -1,6 +1,6 @@
 Name: Behemoth Hippopotamus
 Nom: Hippotame Bénémoth
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 Behemoth hippopotamuses stand taller than elephants. They spend less time out of water than their smaller kin. Behemoth hippos are omnivorous, and many enjoy the taste of meat.<br /><br />
