--- a/data/equipment/consumable-05-5ftFTiKY0BMvhzL9.htm
+++ b/data/equipment/consumable-05-5ftFTiKY0BMvhzL9.htm
@@ -1,7 +1,6 @@
 Name: Stone Body Mutagen (Lesser)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mutagène Corps-de-pierre (inférieur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,10 @@ Nom:
 <p><strong>Duration</strong> 10 minute.</p>
 <p>@Compendium[pf2e.consumable-effects.PEPOd38VfVzQMKG5]{Effect: Stone Body Mutagen (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
 Ce mutagène calcifie votre corps, le rendant aussi dur que de la pierre.</p>
-<p><strong>Avantage</strong> Vous gagnez une résistance de 5 aux dégâts physiques (sauf matraquage).</p>
-<p><strong>Inconvénient</strong> Vos vitesses sont réduites de 10 pieds (minimum 5 pieds) et vous subissez une pénalité de -2 aux sauvegardes par réflexe.</p>
+<p><strong>Avantage</strong> Vous gagnez une résistance de 5 aux dégâts physiques (sauf contondant).</p>
+<p><strong>Inconvénient</strong> Vos vitesses sont réduites de 4,5 mètres (minimum 1,5 mètres) et vous subissez une pénalité de -2 aux sauvegardes par réflexe.</p>
 <p><strong>Durée</strong> 10 minutes.</p>
-<p>@Compendium[pf2e.consumable-effects.PEPOd38VfVzQMKG5]{Effet : Corps de pierre mutagène (inférieur)}</p>
+<p>@Compendium[pf2e.consumable-effects.PEPOd38VfVzQMKG5]{Effet : Mutagène Corps-de-pierre (inférieur)}</p>
