--- a/data/equipment/consumable-12-FZ6SMwiei6NnEp3e.htm
+++ b/data/equipment/consumable-12-FZ6SMwiei6NnEp3e.htm
@@ -1,7 +1,6 @@
 Name: Stone Body Mutagen (Moderate)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mutagène Corps-de-pierre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,8 @@ Nom:
 <p><strong>Duration</strong> 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.1xHHvQlW4pRR89qj]{Effect: Stone Body Mutagen (Moderate)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
-<hr />
 Ce mutagène calcifie votre corps, le rendant aussi dur que de la pierre.</p>
-<p><strong>Avantage</strong> Vous gagnez une résistance de 5 aux dégâts physiques (sauf matraquage).</p>
-<p><strong>Inconvénient</strong> Vos vitesses sont réduites de 10 pieds (minimum 5 pieds) et vous subissez une pénalité de -2 aux sauvegardes par réflexe.</p>
+<p><strong>Avantage</strong> Vous gagnez une résistance de 5 aux dégâts physiques (sauf contondant).</p>
+<p><strong>Inconvénient</strong> Vos vitesses sont réduites de 4,5 mètres (minimum 1,5 mètres) et vous subissez une pénalité de -2 aux sauvegardes par réflexe.</p>
 <p><strong>Durée</strong> 1 heure.</p>
-<p>@Compendium[pf2e.consumable-effects.1xHHvQlW4pRR89qj]{Effet : Corps de pierre mutagène (modéré)}</p>
+<p>@Compendium[pf2e.consumable-effects.PEPOd38VfVzQMKG5]{Effet : Mutagène Corps-de-pierre (modéré)}</p>
