--- a/data/equipment/consumable-05-iUOcC9vFboSFI8fU.htm
+++ b/data/equipment/consumable-05-iUOcC9vFboSFI8fU.htm
@@ -1,7 +1,6 @@
 Name: False Death
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mort-truquée
+État: libre
 
 ------ Description (en) ------
 <p>Typically used to fake one's death, this poison swiftly causes the imbiber to lose consciousness and suppresses vital signs. A creature examining the unconscious target must succeed at a Medicine check against the imbiber's Deception DC + 4 to determine that the target is alive, and a critical success allows the examiner to determine that a toxin is causing the effect. The false death toxin has an extremely bitter taste (Perception DC 10 to detect), making it difficult to trick a creature into consuming the poison against its wishes.</p>
@@ -14,12 +13,12 @@ Nom:
 <p><strong>Stage 2</strong> unconscious (1 hour)</p>
 <p><strong>Stage 3</strong> unconscious (1 day)</p>
 ------ Description (fr) ------
-<p>Typiquement utilisé pour simuler la mort d'une personne, ce poison fait rapidement perdre conscience à l'imbibé et supprime les signes vitaux. Une créature examinant la cible inconsciente doit réussir un test de médecine contre le DC + 4 de tromperie de l’imbibateur pour déterminer que la cible est vivante, et un succès critique permet à l’examinateur de déterminer qu’une toxine provoque l’effet. La toxine de fausse mort a un goût extrêmement amer (Perception DC 10 à détecter), ce qui rend difficile de tromper une créature pour qu'elle consomme le poison contre sa volonté.</p>
+<p>Typiquement utilisé pour simuler la mort d'une personne, ce poison fait rapidement perdre conscience à l'imbibé et supprime les signes vitaux. Une créature examinant la cible inconsciente doit réussir un test de médecine contre le DD + 4 de tromperie de l’imbibateur pour déterminer que la cible est vivante, et un succès critique permet à l’examinateur de déterminer qu’une toxine provoque l’effet. La toxine de  Mort-truquée a un goût extrêmement amer (Perception DD 10 à détecter), ce qui rend difficile de tromper une créature pour qu'elle consomme le poison contre sa volonté.</p>
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
-<p><strong>Jet de sauvegarde</strong> DC 18 Force</p>
+<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Jet de sauvegarde</strong> DC 18 Vigueur</p>
 <p><strong>Début</strong> 10 minutes</p>
 <p><strong>Durée maximale</strong> 5 jours</p>
-<p><strong>Étape 1</strong><strong>maladroit 2</strong> (1 tour)</p>
-<p><strong>stade 2</strong> inconscient (1 heure)</p>
-<p><strong>Stade 3</strong> inconscient (1 jour)</p>
+<p><strong>Étape 1</strong><strong> @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 2</strong> (1 round)</p>
+<p><strong>stade 2</strong> @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Inconscient} (1 heure)</p>
+<p><strong>Stade 3</strong> Inconscient (1 jour)</p>
