--- a/data/equipment/consumable-05-JAOWw2GhupaYoYg9.htm
+++ b/data/equipment/consumable-05-JAOWw2GhupaYoYg9.htm
@@ -1,7 +1,6 @@
 Name: Sixfingers Elixir (Lesser)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Élixir Six-doigts (inférieur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -11,9 +10,9 @@ Nom:
 <p><strong>Duration</strong> 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.XrlChFETfe8avLsX]{Effect: Sixfingers Elixir (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Ce liquide granuleux et épicé vous fait pousser un sixième doigt à chaque main et vous donne une poigne d'araignée.</p>
-<p>Vous gagnez un bonus de +2 à votre DC de Réflexes pour ne pas être @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmé} et un @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Grimpeur}. Vitesse de 20 pieds pour la durée indiquée.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Ce liquide granuleux et épicé vous fait pousser un sixième doigt à chaque main et vous confère une préhension semblable à celle d'une araignée.</p>
+<p>Vous gagnez un bonus de +2 à votre DC de Réflexes pour ne pas être @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmé} et une vitesse d'@Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escalade}. de 6 mètres pour la durée indiquée.</p>
 <hr />
 <p><strong>Durée</strong> 10 minutes.</p>
-<p>@Compendium[pf2e.consumable-effects.XrlChFETfe8avLsX]{Effet : Elixir à six doigts (inférieur)}</p>
+<p>@Compendium[pf2e.consumable-effects.XrlChFETfe8avLsX]{Effet: Elixir Six-doigts (inférieur)}</p>
