--- a/data/equipment/consumable-01-bOPQDM54W8ZDoULY.htm
+++ b/data/equipment/consumable-01-bOPQDM54W8ZDoULY.htm
@@ -1,7 +1,6 @@
 Name: Serene Mutagen (Lesser)
 Nom: Mutagène de sérénité (inférieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,10 @@ Nom: Mutagène de sérénité (inférieur)
 <p><strong>Duration</strong> 1 minute.</p>
 <p>@Compendium[pf2e.consumable-effects.5xgapIXn5DwbXHKh]{Effect: Serene Mutagen (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interaction</p>
+<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr>
 <p>Vous gagnez en sérénité intérieure, vous concentrant sur les détails et renforçant votre esprit contre les assauts mentaux, mais la violence vous rebute.</p>
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +1 aux jets de Volonté et aux tests de Perception, Médecine, Nature, Religion et Survie. Ce bonus augmente à +2 lorsque vous faites un jet de Volonté contre les effets mentaux.</p>
 <p><strong>Inconvénient</strong> Vous subissez un malus de −1 aux jets d’attaque et au DD des sorts offensifs et un malus de −1 par dé de dégâts aux dégâts des armes, des attaques à mains nues et des sorts</p>
 <p><strong>Durée</strong> 1 minute</p>
-<p>@Compendium[pf2e.spell-effects.5xgapIXn5DwbXHKh]{Effet: Mutagène de sérénité (Inférieur)}</p>
+<p>@Compendium[pf2e.spell-effects.5xgapIXn5DwbXHKh]{Effet: Mutagène de sérénité (inférieur)}</p>
