--- a/data/equipment/consumable-03-XEYveTvLH1lJ4jeI.htm
+++ b/data/equipment/consumable-03-XEYveTvLH1lJ4jeI.htm
@@ -1,7 +1,6 @@
 Name: Serene Mutagen (Moderate)
 Nom: Mutagène de sérénité (modéré)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,10 @@ Nom: Mutagène de sérénité (modéré)
 <p><strong>Duration</strong> 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.yrbz0rZzp8aZEqbv]{Effect: Serene Mutagen (Moderate)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interaction</p>
+<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr>
 <p>Vous gagnez en sérénité intérieure, vous concentrant sur les détails et renforçant votre esprit contre les assauts mentaux, mais la violence vous rebute.</p>
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +2 aux jets de Volonté et aux tests de Perception, Médecine, Nature, Religion et Survie. Ce bonus augmente à +3 lorsque vous faites un jet de Volonté contre les effets mentaux.</p>
 <p><strong>Inconvénient</strong> Vous subissez un malus de −1 aux jets d’attaque et au DD des sorts offensifs et un malus de −1 par dé de dégâts aux dégâts des armes, des attaques à mains nues et des sorts</p>
-<p><strong>Durée</strong> 10 minutes.</p>
-<p>@Compendium[pf2e.consumable-effects.yrbz0rZzp8aZEqbv]{Effet: Mutagène de sérénité (Modéré)}</p>
+<p><strong>Durée</strong> 10 minutes</p>
+<p>@Compendium[pf2e.consumable-effects.yrbz0rZzp8aZEqbv]{Effet: Mutagène de sérénité (modéré)}</p>
