--- a/data/equipment/consumable-17-ccrdVliTNBh2mNZf.htm
+++ b/data/equipment/consumable-17-ccrdVliTNBh2mNZf.htm
@@ -1,7 +1,6 @@
 Name: Serene Mutagen (Major)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mutagène de sérénité (majeur)
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -14,8 +13,11 @@ Nom:
 ------ Description (fr) ------
 <p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
 <hr />
-<p>Vous gagnez en sérénité intérieure, vous vous concentrez sur les détails du dossier et vous vous endurcissez contre les agressions mentales, mais vous trouvez la violence rebutante.</p>
-<p><strong>Avantage</strong> Vous gagnez un bonus d'objet de +4 aux sauvegardes de Volonté et aux contrôles de Perception, de Médecine, de Nature, de Religion et de Survie. Lorsque vous obtenez un succès sur une sauvegarde de Volonté contre un effet mental, vous obtenez un succès critique à la place, et vos échecs critiques sur les sauvegardes de Volonté contre les effets mentaux deviennent des échecs à la place.</p>
-<p><strong>Drawback</strong> Vous subissez une pénalité de -1 aux jets d'attaque et aux sauvegardes DC des sorts offensifs, et une pénalité de -1 par dé de dégâts à tous les dégâts d'armes, d'attaques à mains nues et de sorts.</p>
-<p><strong>Durée</strong> 1 heure.</p>
-<p>@Compendium[pf2e.consumable-effects.t7VUJHSUT6bkVUjg]{Effet : Mutagène serein (Majeur)}</p>
+<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
+<hr>
+<p>Vous gagnez en sérénité intérieure, vous concentrant sur les détails et renforçant votre esprit contre les assauts mentaux, mais la violence vous rebute.</p>
+<p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +4 aux jets de Volonté et aux tests de Perception, Médecine, Nature, Religion et Survie. Quand vous obtenez un succès sur un jet de Volonté contre un effet mental, vous remportez à la place un succès critique tandis que vos échecs critiques sur les jets de Volonté contre un effet mental deviennent de simples échecs.</p>
+<p><strong>Inconvénient</strong> Vous subissez un malus de −1 aux jets d’attaque et au DD des sorts offensifs et un malus de −1 par dé de dégâts aux dégâts des armes, des attaques à mains nues et des sorts</p>
+<p><strong>Durée</strong> 1 heure</p>
+<p>@Compendium[pf2e.consumable-effects.yrbz0rZzp8aZEqbv]{Effet: Mutagène de sérénité (modéré)}</p>
+
