--- a/data/equipment/consumable-11-Yej7lnnDYDZybGqo.htm
+++ b/data/equipment/consumable-11-Yej7lnnDYDZybGqo.htm
@@ -1,7 +1,6 @@
 Name: Serene Mutagen (Greater)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mutagène de sérénité (supérieur)
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,10 @@ Nom:
 <p><strong>Duration</strong> 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.jw6Tr9FbErjLAFLQ]{Effect: Serene Mutagen (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
-<hr />
-<p>Vous gagnez en sérénité intérieure, vous vous concentrez sur les détails du dossier et vous vous endurcissez contre les agressions mentales, mais vous trouvez la violence rebutante.</p>
-<p><strong>Avantage</strong> Vous gagnez un bonus de +3 aux sauvegardes de Volonté et aux tests de Perception, de Médecine, de Nature, de Religion et de Survie. Ce bonus passe à +4 lorsque vous tentez des sauvegardes de Volonté contre des effets mentaux. Lorsque vous obtenez un succès sur un jet de sauvegarde de Volonté contre un effet mental, vous obtenez un succès critique à la place.</p>
-<p><strong>Drawback</strong> Vous subissez une pénalité de -1 aux jets d'attaque et aux sauvegardes DC des sorts offensifs, et une pénalité de -1 par dé de dommage à tous les dommages causés par les armes, les attaques à mains nues et les sorts.</p>
-<p><strong>Durée</strong> 1 heure.</p>
-<p>@Compendium[pf2e.consumable-effects.jw6Tr9FbErjLAFLQ]{Effet : Mutagène serein (supérieur)}</p>
+<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
+<hr>
+<p>Vous gagnez en sérénité intérieure, vous concentrant sur les détails et renforçant votre esprit contre les assauts mentaux, mais la violence vous rebute.</p>
+<p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +3 aux jets de Volonté et aux tests de Perception, Médecine, Nature, Religion et Survie. Ce bonus augmente à +4 lorsque vous faites un jet de Volonté contre les effets mentaux. Si vous obtenez un succès à un jet de Volonté contre un effet mental, vous obtenez à la place un succès critique..</p>
+<p><strong>Inconvénient</strong> Vous subissez un malus de −1 aux jets d’attaque et au DD des sorts offensifs et un malus de −1 par dé de dégâts aux dégâts des armes, des attaques à mains nues et des sorts</p>
+<p><strong>Durée</strong> 1 heure</p>
+<p>@Compendium[pf2e.consumable-effects.jw6Tr9FbErjLAFLQ]{Effet: Mutagène de sérénité (supérieur)}</p>
