--- a/data/classes/RwjIZzIxzPpUglnK.htm
+++ b/data/classes/RwjIZzIxzPpUglnK.htm
@@ -956,7 +956,7 @@ Nom: Magicien
 </table>
 <h2>Thèse arcanique</h2>
 <p>Lors de vos études pour devenir un véritable magicien, vous avez écrit une thèse suite à des recherches sur un sujet précis. Vous gagnez un avantage dépendant de ce sujet. Les sujets de thèse sont donnés plus loin, mais la vôtre avait probablement un titre plus long et plus technique, comme Des méthodes de l’interpolation des sorts et de la genèse d’une nouvelle compréhension des fondations de la magie.</p>
-<p>Consultez les différentes thèses arcaniques @Compendium[pf2e.classfeatures.M89l9FOnjHe63wD7]{Thèses arcaniques}.<br /></span></p>
+<p>Consultez les différentes thèses arcaniques @Compendium[pf2e.classfeatures.M89l9FOnjHe63wD7]{Thèses arcaniques}.</p>
 <h2>Maîtrises initiales</h2>
 <p>Au niveau 1, vous obtenez un nombre de maîtrises qui représentent votre entraînement de base. Elles sont indiquées au début de cette classe.</p>
 <h2>Dons de compétence<span style="float: right;">Niveau 2</span></h2>
