--- a/data/equipment/consumable-07-7IrQPyMm76nLVoXx.htm
+++ b/data/equipment/consumable-07-7IrQPyMm76nLVoXx.htm
@@ -1,6 +1,6 @@
 Name: Sovereign Glue
-Nom: 
-État: auto-trad
+Nom: Colle souveraine
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> 1 minute (Interact)</p>
