--- a/data/equipment/equipment-05-P6v2AtJw7AUwaDzf.htm
+++ b/data/equipment/equipment-05-P6v2AtJw7AUwaDzf.htm
@@ -1,8 +1,8 @@
 Name: Fearsome
-Nom: 
-État: auto-trad
+Nom: Effrayante
+État: libre
 
 ------ Description (en) ------
 <p>When you critically hit, the target becomes <em>frightened</em> 1.</p>
 ------ Description (fr) ------
-<p>Lorsque vous obtenez un coup critique, la cible devient <em>effrayée</em>  1.</p> 
+<p>Lorsque vous obtenez un coup critique, la cible devient Effrayée 1.</p> 
