fin de la révision de la page de champion

--- a/data/classes/x8iwnpdLbfcoZkHA.htm
+++ b/data/classes/x8iwnpdLbfcoZkHA.htm
@@ -425,31 +425,29 @@ Nom: Champion
 <p>Vous avez appris à infliger de graves blessures avec les armes que vous connaissez le mieux. Vous infligez 2 dégâts de plus avec les armes et les attaques à mains nues pour lesquelles vous êtes expert. Ces dégâts passent à 3 si vous êtes maître et à 4 si vous êtes légendaire.</p>
 <h2>Expertise du champion<span style="float: right;">Niveau 9</span></h2>
 <p>Les prières renforcent votre puissance divine. Votre rang de maîtrise dans le DD de classe de champion, les jets d’attaque des sorts divins et les DD de vos sorts divins, passe à expert.</p>
-<h2 class="title">Châtiment divin<span style="float: right;">Niveau 9</span></h2>
+<h2>Châtiment divin<span style="float: right;">Niveau 9</span></h2>
 <p>Votre réaction de champion s'améliore.</p>
-<p>Consultez les <a style="text-decoration: underline;" href="https://2e.aonprd.com/Causes.aspx">causes</a> spécifiques pour plus d'informations.</p>
-<h2 class="title">Juggernaut<span style="float: right;">Niveau 9</span></h2>
+<p>Consultez les causes spécifiques pour plus d'informations.</p>
+<h2>Juggernaut<span style="float: right;">Niveau 9</span></h2>
 <p>Votre corps s’est habitué à l’effort physique et à résister aux maladies. Votre rang de maîtrise pour les jets de Vigueur devient maître. Quand vous obtenez un succès sur un jet de Vigueur, vous remportez à la place un succès critique.</p>
-<h2 class="title">Réflexes éclair<span style="float: right;">Niveau 9</span></h2>
+<h2>Réflexes éclair<span style="float: right;">Niveau 9</span></h2>
 <p>Vos réflexes sont fulgurants. Votre rang de maîtrise pour les jets de Réflexes passe à expert.</p>
-<h2 class="title">Vigilance<span style="float: right;">Niveau 11</span></h2>
+<h2>Vigilance<span style="float: right;">Niveau 11</span></h2>
 <p>Vous restez à l’affût des menaces alentour. Votre rang de maîtrise en Perception passe à expert.</p>
-<h2 class="title">Résolution divine<span style="float: right;">Niveau 11</span></h2>
+<h2>Résolution divine<span style="float: right;">Niveau 11</span></h2>
 <p>Votre foi vous permet de parfaitement contrôler votre volonté. Votre rang de maîtrise pour les jets de Volonté passe à maître. Quand vous obtenez un succès à un jet de Volonté, celui-ci est transformé en succès critique.</p>
-<h2 class="title">Exaltation<span style="float: right;">Niveau 11</span></h2>
+<h2>Exaltation<span style="float: right;">Niveau 11</span></h2>
 <p>Votre réaction de champion exalte les alliés à proximité, ce qui leur permet d'en bénéficier eux aussi.</p>
-<p>Consultez les <a style="text-decoration: underline;" href="https://2e.aonprd.com/Causes.aspx">causes</a> spécifiques pour plus d'informations.</p>
-<h2 class="title">Maîtrise des armures<span style="float: right;">Niveau 13</span></h2>
+<p>Consultez les causes spécifiques pour plus d'informations.</p>
+<h2>Maîtrise des armures<span style="float: right;">Niveau 13</span></h2>
 <p>Vous améliorez votre maîtrise des armures, ce qui vous permet d’encaisser plus de coups. Votre rang de maîtrise avec les armures légères, intermédiaires et lourdes, ainsi qu’avec la défense sans armure, passe à maître.</p>
-<h2 class="title">Maîtrise martiale<span style="float: right;">Niveau 13</span></h2>
+<h2>Maîtrise martiale<span style="float: right;">Niveau 13</span></h2>
 <p>Vous connaissez parfaitement vos armes. Votre rang de maîtrise avec les armes simples et les armes de guerre passe à maître.</p>
-<h2 class="title">Spécialisation martiale supérieure<span style="float: right;">Niveau 15</span></h2>
+<h2>Spécialisation martiale supérieure<span style="float: right;">Niveau 15</span></h2>
 <p>Les dégâts que vous infligez grâce à votre spécialisation martiale passent à 4 avec les armes et les attaques à mains nues si vous possédez le rang expert avec celles-ci, à 6 si vous possédez le rang maître et à 8 si vous possédez le rang légendaire.</p>
-<h2 class="title">Maîtrise du champion<span style="float: right;">Niveau 17</span></h2>
+<h2>Maîtrise du champion<span style="float: right;">Niveau 17</span></h2>
 <p>Vous utilisez à présent parfaitement l’arsenal des techniques et des sorts divins du champion. Votre rang de maîtrise dans le DD de classe de champion, les jets d’attaque des sorts divins et les DD de vos sorts divins, passe à maître.</p>
-<h2 class="title">Armure légendaire<span style="float: right;">Niveau 17</span></h2>
+<h2>Armure légendaire<span style="float: right;">Niveau 17</span></h2>
 <p>Votre foi vous protège tout aussi efficacement que l’acier. Votre rang de maîtrise avec les armures légères, intermédiaires et lourdes, ainsi qu’avec la défense sans armure, passe à légendaire.</p>
-<h2 class="title">Défi du héros<span style="float: right;">Niveau 19</span></h2>
-<p>Vous pouvez braver le destin et continuer à combattre tant qu’il vous reste de l’énergie divine. Vous gagnez le sort de dévotion <a href="https://2e.aonprd.com/Spells.aspx?ID=394"><em>défi du héros</em></a>.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<h2>Défi du héros<span style="float: right;">Niveau 19</span></h2>
+<p>Vous pouvez braver le destin et continuer à combattre tant qu’il vous reste de l’énergie divine. Vous gagnez le sort de dévotion @Compendium[pf2e.spells-srd.uGXWkR2h8q9MRzEM]{défi du héros}</em>.</p>
