--- a/data/equipment/consumable-05-Xnmx6SJ6OkJOfYxF.htm
+++ b/data/equipment/consumable-05-Xnmx6SJ6OkJOfYxF.htm
@@ -1,11 +1,10 @@
 Name: Freezing Ammunition
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Munition givrante
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
 <p>This chilly ammunition is dark blue and cold to the touch. When activated freezing ammunition hits a target, the target must succeed at a DC 19 Fortitude save or be slowed 1 for 1 round by the intense cold (slowed 1 for 1 minute on a critical failure).</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Ces munitions givrantes sont bleu foncé et froides au toucher. Lorsque les munitions glaciales activées touchent une cible, celle-ci doit réussir une sauvegarde de Force DC 19 ou être ralentie de 1 pendant 1 round par le froid intense (ralentie de 1 pendant 1 minute sur un échec critique).</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Ces munitions givrantes sont bleu foncé et froides au toucher. Lorsque les munitions glaciales activées touchent une cible, celle-ci doit réussir un jet de sauvegarde de Vigueur DC19 ou être @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralentie} 1 pendant 1 round par le froid intense (ralentie de 1 pendant 1 minute sur un échec critique).</p>
