--- a/data/equipment/consumable-14-esDSCEI1cf8Op93I.htm
+++ b/data/equipment/consumable-14-esDSCEI1cf8Op93I.htm
@@ -1,5 +1,5 @@
 Name: Addiction Suppressant (Major)
-Nom: Suppresseur de dépendance (inférieur)
+Nom: Suppresseur de dépendance (majeur)
 État: libre
 
 ------ Description (en) ------
