--- a/data/equipment/consumable-10-ZOOrK4yEW6rFpPJ1.htm
+++ b/data/equipment/consumable-10-ZOOrK4yEW6rFpPJ1.htm
@@ -1,5 +1,5 @@
 Name: Addiction Suppressant (Greater)
-Nom: Suppresseur de dépendance (inférieur)
+Nom: Suppresseur de dépendance (supérieur)
 État: libre
 
 ------ Description (en) ------
