--- a/data/equipment/consumable-06-qasFfdiZKIczoZ9p.htm
+++ b/data/equipment/consumable-06-qasFfdiZKIczoZ9p.htm
@@ -1,7 +1,6 @@
 Name: Bloodhound Mask (Moderate)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Masque du limier (modéré)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -10,8 +9,8 @@ Nom:
 <p>When you use Survival to @Compendium[pf2e.actionspf2e.EA5vuSgJfiHH7plD]{Track} a creature by its scent, your proficiency bonus is equal to your level even if you're untrained, and the mask grants you a +2 item bonus to your Survival check. The GM sets the Survival DC based on the area's ability to hold scent rather than on visual clues, as normal for using scent.</p>
 <p>@Compendium[pf2e.consumable-effects.wFF0SZs1Hcf87Kk1]{Effect: Bloodhound Mask (Moderate)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p><strong>Durée</strong> 1 heure</p>
-<p>Ce masque large à usage unique est conçu pour être glissé sur votre bouche et votre nez et son filtre alchimique activé, le tout d'une seule main. Une fois activé, le masque aiguise les odeurs, vous donnant un parfum imprécis d'une portée de 30 pieds. Vous ne pouvez pas porter d’autres masques lorsque vous portez un masque de limier.</p>
-<p>Lorsque vous utilisez Survie pour @Compendium[pf2e.actionspf2e.EA5vuSgJfiHH7plD]{pister} une créature par son odeur, votre bonus de compétence est égal à votre niveau même si vous'n'êtes pas entraîné, et le masque vous accorde un bonus d'objet de +2 à votre test de Survie. Le MJ fixe le DC de survie en fonction de la capacité de la zone'à retenir les odeurs plutôt que les indices visuels, comme c'est normalement le cas pour l'utilisation d'une odeur.</p>
-<p>@Compendium[pf2e.consumable-effects.wFF0SZs1Hcf87Kk1]{Effet : Masque du limier (modéré)}</p>
+<p>Ce large masque à usage unique est conçu pour être glissé sur votre bouche et votre nez et son filtre alchimique activé, le tout avec une seule main. Une fois activé, le masque accentue les odeurs, vous donnant un odorat imprécis avec une portée de 9 mètres. Vous ne pouvez porter un autre masque tant que vous portez un masque du limier.</p>
+<p>Lorsque vous utilisez Survie pour @Compendium[pf2e.actionspf2e.EA5vuSgJfiHH7plD]{Pister} une créature à l'aide de son odeur, votre bonus de maîtrise est égal à votre niveau même si vous êtes inexpérimenté et le masque vous fait bénéficier d'un bonus d'objet de +2 à votre test de Survie. Le MJ fixe le DD de  Survie en fonction de la capacité de la zone à retenir les odeurs plutôt que les indices visibles, comme d'ordinaire en utilisant odorat.</p>
+<p>@Compendium[pf2e.spell-effects.S4MZzALqFoXJsr6o]{Effet: Masque du limier (modéré)}</p>
