--- a/data/equipment/consumable-06-ROdjFw7wby982qf5.htm
+++ b/data/equipment/consumable-06-ROdjFw7wby982qf5.htm
@@ -1,7 +1,6 @@
 Name: Terrifying Ammunition
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Munition terrifiante
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -12,10 +11,10 @@ Nom:
 <p><strong>Failure</strong> The creature is frightened 1 and can't reduce its frightened value below 1 until it spends an action, which has the concentrate trait, to calm itself down.</p>
 <p><strong>Critical Failure</strong> As failure, but the creature is frightened 2.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
-<p>Ces munitions noires et grises sont gravées de symboles occultes et de minuscules crânes grimaçants. Lorsque les munitions terrifiantes activées endommagent une créature, elles remplissent l’esprit de cette dernière de visions de ses propres échecs, de ses tragédies et, finalement, de sa propre mort. La créature doit tenter une sauvegarde de Volonté à DC 20.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Ces munitions noires et grises sont gravées de symboles occultes et de minuscules crânes grimaçants. Lorsque les munitions terrifiantes activées endommagent une créature, elles remplissent l’esprit de cette dernière de visions de ses propres échecs, de ses tragédies et, finalement, de sa propre mort. La créature doit tenter une sauvegarde de Volonté à DD 20.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
-<p><strong>Succès</strong> La créature est effrayée 1.</p>
+<p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayée} 1.</p>
 <p><strong>Failure</strong> La créature est effrayée 1 et ne peut pas réduire sa valeur d'effroi en dessous de 1 jusqu'à ce qu'elle dépense une action, qui a le trait de concentration, pour se calmer.</p>
 <p><strong>Échec critique</strong> Comme un échec, mais la créature est effrayée 2.</p>
