--- a/data/equipment/consumable-07-4tnPWyApPZP1P1yO.htm
+++ b/data/equipment/consumable-07-4tnPWyApPZP1P1yO.htm
@@ -1,7 +1,6 @@
 Name: Swift Block Cabochon
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Cabochon de Blocage au bouclier
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Envision</p>
@@ -9,7 +8,7 @@ Nom:
 <p>This clear quartz cabochon attaches to the center of your shield.</p>
 <p>When you activate the cabochon, you use the Shield Block reaction even if you hadn't raised the affixed shield (and even if you don't normally have that reaction).</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">F</span> Envision</p>
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
 <p><strong>Déclencheur</strong> Vous subissez les dégâts d'une attaque physique alors que le bouclier qui vous est apposé n'est pas levé</p>
 <p>Ce cabochon de quartz clair s'attache au centre de votre bouclier</p>
-<p>Lorsque vous activez le cabochon, vous utilisez la réaction Blocage de bouclier même si vous n'aviez pas levé le bouclier apposé (et même si vous n'avez pas normalement cette réaction).</p>
+<p>Lorsque vous activez le cabochon, vous utilisez la réaction @Compendium[pf2e.bestiary-ability-glossary-srd.m4HQ2o5aPxjXf2kY]{Blocage au bouclier} même si vous n'aviez pas levé le bouclier apposé (et même si vous n'avez pas normalement cette réaction).</p>
