--- a/data/equipment/consumable-00-AqslI71DReZOzgAW.htm
+++ b/data/equipment/consumable-00-AqslI71DReZOzgAW.htm
@@ -1,8 +1,8 @@
 Name: Formulated Sunlight
-Nom: 
-État: auto-trad
+Nom: Concoction de soleil
+État: libre
 
 ------ Description (en) ------
 <p>A leshy can derive nourishment from specially formulated bottles of sunlight instead of natural sunlight.</p>
 ------ Description (fr) ------
-Une lépreuse peut se nourrir de bouteilles de soleil spécialement conçues à la place de la lumière naturelle du soleil ;
+Un Leshy peut se nourrir de bouteilles de conconction de soleil spécialement conçues pour remplacer la lumière naturelle du soleil.
