--- a/data/equipment/consumable-01-PLun5Enmp8ZbjogV.htm
+++ b/data/equipment/consumable-01-PLun5Enmp8ZbjogV.htm
@@ -1,6 +1,6 @@
 Name: Bookthief Brew
-Nom: 
-État: auto-trad
+Nom: Infusion du Voleur de livres
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> 1 minute</p>
@@ -9,4 +9,4 @@ Nom:
 ------ Description (fr) ------
 <p><strong>Activer</strong> 1 minute</p>
 <hr />
-<p>Cette concoction se mélange en une substance épaisse et pâteuse lorsqu'elle est secouée. Exposée à l'air, la substance sèche au bout d'une minute. Si elle est versée sur un livre, un parchemin ou tout autre support contenant des mots écrits à l'encre, l'infusion fera une copie exacte des mots avec lesquels elle est en contact pendant qu'elle sèche, bien qu'elle ne contienne aucun effet magique ou autre propriété spéciale des mots originaux. Une fois séchée, vous pouvez retirer la substance séchée comme une action d'Interact. Une seule fiole d'infusion de voleur de livres peut recouvrir deux pages d'un livre, un seul parchemin, ou une surface similaire pour d'autres surfaces, produisant une feuille séchée aussi épaisse qu'un morceau de papier. Malheureusement, la copie de la feuille est inversée et nécessite un miroir pour être lue correctement ;
+<p>Cette concoction se mélange en une substance épaisse et pâteuse lorsqu'elle est secouée. Exposée à l'air, la substance sèche au bout d'une minute. Si elle est versée sur un livre, un parchemin ou tout autre support contenant des mots écrits à l'encre, l'infusion fera une copie exacte des mots avec lesquels elle est en contact pendant qu'elle sèche, bien qu'elle ne contienne aucun effet magique ou autre propriété spéciale des mots originaux. Une fois séchée, vous pouvez retirer la substance séchée avec l'action d'Interagir. Une seule fiole d'infusion du voleur de livres peut recouvrir deux pages d'un livre, un seul parchemin, ou une surface similaire pour d'autres surfaces, produisant une feuille séchée aussi épaisse qu'un morceau de papier. Malheureusement, les lettres de la copie sont inversés et nécessitent un miroir pour être lus correctement.
