--- a/data/equipment/consumable-01-jlFx4JIBKJuaINpv.htm
+++ b/data/equipment/consumable-01-jlFx4JIBKJuaINpv.htm
@@ -1,6 +1,6 @@
 Name: Potion of Shared Memories
-Nom: 
-État: auto-trad
+Nom: Potion de la Mémoire partagée
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
@@ -10,5 +10,5 @@ Nom:
 ------ Description (fr) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
 <hr />
-<p>Une potion de souvenirs partagés peut transférer des souvenirs d'une créature à une autre. Pour placer un souvenir dans la potion, vous devez tenir la fiole et vous concentrer sur un souvenir particulier pendant 1 minute. Ce souvenir doit concerner un seul événement, un seul lieu, une seule personne ou s'étendre sur une durée d'environ 1 minute. Le fluide clair prend une teinte chatoyante rappelant le souvenir stocké et acquiert un goût légèrement sucré.</p>
-<p>Après avoir consommé la potion, le buveur se rappelle vivement le souvenir, et peut ensuite s'en souvenir aussi facilement qu'un souvenir qu'il a réellement vécu. Un buveur réticent peut refuser d'absorber le souvenir.</p>
+<p>Une potion de la mémoire partagée peut transférer des souvenirs d'une créature à une autre. Pour placer un souvenir dans la potion, vous devez tenir la fiole et vous concentrer sur un souvenir particulier pendant 1 minute. Ce souvenir doit concerner un seul événement, un seul lieu, une seule personne ou s'étendre sur une durée d'environ 1 minute. Le fluide clair prend une teinte chatoyante rappelant le souvenir stocké et acquiert un goût légèrement sucré.</p>
+<p>Après avoir consommé la potion, le buveur se rappelle vivement du souvenir stocké, et peut ensuite l'évoquer aussi facilement qu'un moment qu'il a réellement vécu. Un buveur réticent peut refuser d'absorber la potion de la Mémoire partagée.</p>
